infrastructure/my-cluster/ingress/gitlab-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kustomize.toolkit.fluxcd.io/name: infrastructure
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: external-service-gitlab
  namespace: gitops
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9080
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    kustomize.toolkit.fluxcd.io/name: infrastructure
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: external-service-gitlab
  namespace: gitops
subsets:
- addresses:
  - ip: 172.31.13.161
  ports:
  - port: 9080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/set-real-ip-from: 0.0.0.0/0
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    kustomize.toolkit.fluxcd.io/name: infrastructure
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: external-ingress-gitlab
  namespace: gitops
spec:
  ingressClassName: nginx
  rules:
  - host: gitlab.zevpa.com
    http:
      paths:
      - backend:
          service:
            name: external-service-gitlab
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - gitlab.zevpa.com
    secretName: tls-zevpa-com
